--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@types/chrome": "^0.0.134",
+    "@types/chrome": "0.0.267",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/serviceworker": "0.0.86",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
@@ -27,5 +28,8 @@
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "firebase": "^10.11.1"
   }
 }
