--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,17 +1,17 @@
 {
-  "name": "MakeItBetter",
-  "description": "MakeItBetter",
-  "version": "1.0.0",
+  "name": "SecureGenie AI",
+  "description": "World’s first privacy-first AI extension! Automate replies, translations and more without reading your web pages by default.",
+  "version": "1.0.1",
   "manifest_version": 3,
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Maps Util",
-    "default_icon": "icon.png"
+    "default_title": "SecureGenie AI",
+    "default_icon": "icon128.png"
   },
   "permissions": ["contextMenus", "storage","sidePanel"],
   "options_page": "options.html",
